YaCy: The Search Engine with the friendly whale

version 0.46
	* ADDED: more authentication Methods (cookieAuth)
	* ADDED: Form-Login on User.html
	* ADDED: nice Errorpage for httpauth-fail.
	* ADDED: support to generate gettext locales and parse them.
	* CHANGED: new dirlisting support for empty directories instead of copying dir.* into them.

version 0.45
	* UPDATED: new Design of search page
	* ADDED: Image search
	* ADDED: Recrawl option
	* ADDED: auto-dom-filter for the crawler
	* ADDED: link per domain limitation for the crawler
	* ADDED: blog in the menu
	* FIXED: ViewProfile now shows the local profile, too
	* ADDED: new caches for indexes from dht transmission
	* ADDED: a basic bookmarkscache to speed up the bookmark system
	* UPDATED: html parser to support image tags
	* FIXED: blacklists are now used for dht, too
	* UPDATED: better robots.txt support
	
version 0.44
	* FIXED: special chars(like german umlauts) in tagNames allowed. (Allo)
	* ADDED: Show public Bookmarks in Bookmarks.html, private ones, if the user is logged in. (Allo)
	* FIXED: /xml/bookmarks/* now uses one file for private/public entries. private only with password.
	* ADDED: possibility to get the ranking for a url. (Allo)
	* ADDED: yacy.badwords list to filter the topwords. (Borg-0300)
	* ADDED: new simplified yacysearch search page, accessed by the normal search interface from index.html (Orbiter)
	* ADDED: 1-2-3 Config for simple set-up, good for new YaCy users (Orbiter)
	* UPDATED: index write access (dht transmission, indexing, dht deletion) now completely synchronized (Orbiter)
	* FIXED: conjunctive search was broken because of wrong data structures, fixed (Orbiter)
	* UPDATED: more ranking attributes (Orbiter)
	* ADDED: adding real streaming support for lage files (theli)
	* ADDED: support of chunked transfer-encoding for http/1.1 clients (theli)
	* ADDED: support of gzip content-encoding suitable clients (theli)
	* ADDED: added TOC for pages in wiki (low012)

version 0.43