@@ -6,6 +6,7 @@ version 0.46
 	* ADDED: nice Errorpage for httpauth-fail.
 	* ADDED: support to generate gettext locales and parse them.
 	* CHANGED: new dirlisting support for empty directories instead of copying dir.* into them.
+	* CHANGED: do not copy welcome.* / dir.*. We use a overlay instead.
 
 version 0.45
 	* UPDATED: new Design of search page
